--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "serve:dev": "npm i && ng serve",
+    "serve:dev": "ng serve --host 0.0.0.0 --poll --disable-host-check",
     "serve:prod": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
